--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -85,10 +85,17 @@ header h2 {
   color: #9ddcff;
   font-weight: normal;
   line-height: 1.3;
-  width: 540px;
+  width: 1140px;
   letter-spacing: 0;
 }
-
+header h3 {
+  font-size: 20px;
+  color: #9ddcff;
+  font-weight: normal;
+  line-height: 1.3;
+  width: 1140px;
+  letter-spacing: 0;
+}
 .inner {
   position: relative;
   width: 940px;
